# pomodoro

./: .gitignore  CMakeLists.txt
.github/ISSUE_TEMPLATE/: feature_request.md
conf/: configuration.cfg  example.cfg
src/: main.c
src/bar/: bar.c  bar.h  draw_bar.c  draw_bar.h
src/cli_cleaner/: cli_cleaner.c  cli_cleaner.h
src/config/: config.c  config.h
src/exceptions/: exceptions.c  exceptions.h
src/progress_bar/: progress.c  progress.h  progress_bar.c  progress_bar.h
src/session_bar/: session_bar.c  session_bar.h
src/timer/: timer.c  timer.h
